# GPTQ-triton

./: .gitignore  Benchmark.ipynb  CHANGELOG.md  README.md  Verify.ipynb  benchmark_generate.py  convert_weights.py  custom_autotune.py  datautils.py  fused_attention.py  fused_mlp.py  generate.py  gptq.py  original_quant.py  ppl.py  pyproject.toml  quant.py  quant_linear.py  quantize.py  setup.cfg  setup.py  utils.py
src/gptq_triton/: __init__.py  custom_autotune.py  fused_attention.py  fused_mlp.py  quant_linear.py
