[metadata]
name = gptq_triton
version = 0.0.3
author = fpgaminer
author_email = fpgaminer@bitcoin-mining.com
description = Fast GPTQ kernels written in Triton
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/fpgaminer/GPTQ-triton
keywords = gptq, triton, torch, cuda, gpu, quantization, quantize, quantized, inference, deep learning, machine learning
license = Apache License 2.0
license_file = LICENSE
classifiers = 
	Development Status :: 3 - Alpha
	License :: OSI Approved :: Apache Software License
	Intended Audience :: Developers
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Topic :: Scientific/Engineering :: Artificial Intelligence
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = False
package_dir = 
	= src
packages = find:
python_requires = >=3.6
install_requires = 
	triton >= 2.0.0
	torch >= 2.0.0
	transformers

[options.packages.find]
where = src